--- a/MachineChecker/res/values/strings.xml
+++ b/MachineChecker/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="hello_world">Hello Mie!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="hostname">Hostname:</string>
+    <string name="port">Port No:</string>
+    <string name="result">Result:</string>
+    <string name="check">Check!!</string>
 
 </resources>
